Add register key for token

--- a/back-end/src/.env
+++ b/back-end/src/.env
@@ -1,6 +1,6 @@
 SENDGRID_API_KEY=
-REGISTER_KEY=
-RESET_PASSWORD_KEY=
+REGISTER_KEY="QK.JSDKFJSDJdfkdksfJKFKSDj_98234"
+RESET_PASSWORD_KEY="QK.JSDKF0SDjkjDFnJF934DK"
 TIME_EXPIRE=2m
 COIN_RANKING_API_KEY=coinranking81ee3dcceea176fc9921d614d6c38cb30f12d820e41d91ab
 SESSION_KEY=ISFUWEIUR0834%$$_
